# CookieKiss-Render

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CookieKiss-Render.sln  README.md  imgui.ini
IntegratedEdittingEnv/: IntegratedEdittingEnv.vcxproj  IntegratedEdittingEnv.vcxproj.filters
UtilTool/: UtilTool.vcxproj
asset/asset_demo_ShadowWithMutiLights/: box.mtl  cube.mtl  plane.mtl  stdShadowedPhongLighting.fs.glsl
asset/stdModel/cube/: cube.mtl
asset/stdModel/monkey/: monkey.fbx
asset/stdShader/: stdPureColor.fs.glsl  stdShadowedPhongLighting.fs.glsl
ckCore/: ckCamera.cpp  ckCamera.h  ckCore.vcxproj  ckCore.vcxproj.filters  ckLight.cpp  ckLight.h  ckModel.cpp  ckModel.h  ckObject.cpp  ckObject.h  ckScene.cpp  ckScene.h  ckShader.cpp  ckShader.h
demo/demo_HelloOpenGL/: CMakeLists.txt  demo_HelloOpenGL.vcxproj  demo_HelloOpenGL.vcxproj.filters  main.cpp
demo/demo_ImguiVulkanExample/: demo_ImguiVulkanExample.vcxproj  demo_ImguiVulkanExample.vcxproj.filters  main.cpp
demo_HelloOpenGL/: demo_HelloOpenGL.vcxproj
install/ckCore/: ckCore.lib
install/demo/: imgui.ini
src/: CMakeLists.txt  helloworld.cpp
src/IET/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  architecture.drawio  ck_core.cpp  ck_core.h  ck_debug.cpp  ck_debug.h
src/demo/: CMakeLists.txt
src/demo/demo_HelloOpenGL/: CMakeLists.txt  README.md  main.cpp  triangle.fs.glsl  triangle.vs.glsl
src/demo/demo_ImguiVulkanExample/: CMakeLists.txt  README.md  main.cpp
src/demo/demo_OpenGLBakeSystem/: CMakeLists.txt  bake_system.cpp  bake_system.h  main.cpp
src/demo/demo_ShadowWithMutiLights/: CMakeLists.txt  README.md  architecture.drawio  camera.cpp  camera.h  imgui_glfw_window_base.cpp  imgui_glfw_window_base.h  light.cpp  light.cpp.bak  light.h  main.cpp  mlt_file_parameter.md  model.cpp  model.h  render_object.cpp  render_object.h  scene.cpp  scene.h  shader.cpp  shader.h
src/demo/demo_helloOpen3D/: CMakeLists.txt  README.md  main.cpp  main.py
src/util/: CMakeLists.txt  stdInclude.h  std_include.h  util.cpp
stdAsset/stdShader/: stdPureColor.fs.glsl
utilTool/: SimpleHardcodeGeom.cpp  SimpleHardcodeGeom.h  UtilTool.vcxproj.filters  stdInclude.h  utilTool.cpp  utilTool.vcxproj
